feat: implement menu catalog
